--- a/src/prompt-manager/Dockerfile
+++ b/src/prompt-manager/Dockerfile
@@ -1,5 +1,3 @@
-# Dockerfile for MCP System Context Server
-
 # Build stage
 FROM python:3.11-slim AS build
 
@@ -17,8 +15,14 @@ RUN pip install --no-cache-dir build wheel setuptools && \
 # Copy source code
 COPY src/ /app/src/
 
+# Show the directory structure for debugging
+RUN find /app -type f | sort
+
 # Build wheel
 RUN pip wheel --no-cache-dir --wheel-dir=/app/wheels -e .
+
+# Show what was built
+RUN ls -la /app/wheels/
 
 # Runtime stage
 FROM python:3.11-slim
@@ -29,8 +33,8 @@ WORKDIR /app
 # Copy wheels from build stage
 COPY --from=build /app/wheels /app/wheels
 
-# Install the wheels
-RUN pip install --no-index --find-links=/app/wheels/ mcp-prompt-manager && \
+# Install the wheels with verbose output
+RUN pip install --no-index --find-links=/app/wheels/ mcp-prompt-manager -v && \
     rm -rf /app/wheels
 
 # Create data directory for persistence
@@ -40,20 +44,21 @@ RUN mkdir -p /data
 RUN useradd -m mcp && \
     chown -R mcp:mcp /app /data
 
+# Copy in specific script files for direct execution
+COPY --from=build /app/src/mcp_prompt_manager/prompt_manager_server.py /app/
+COPY --from=build /app/src/mcp_prompt_manager/__init__.py /app/
+
 # Switch to non-root user
 USER mcp
 
 # Environment configuration
 ENV PYTHONUNBUFFERED=1 \
     MCP_PROMPT_MANAGER_PERSISTENCE=true \
-    MCP_PROMPT_MANAGER_PERSISTENCE_FILE=/data/templates.json
+    MCP_PROMPT_MANAGER_PERSISTENCE_FILE=/data/templates.json \
+    PYTHONPATH=/app
 
 # Volume for persistent template storage
 VOLUME /data
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-    CMD pip list | grep mcp-prompt-manager || exit 1
-
-# Run the MCP server using the correct module path
-ENTRYPOINT ["python", "-m", "mcp_prompt_manager"] 
+# IMPORTANT: Run prompt_manager_server.py directly
+ENTRYPOINT ["python", "-c", "from prompt_manager_server import main; main()"]
