Implement orchestrator features and Docker support for Mermaid MCP server
This commit introduces several enhancements:
- Added support for the MermaidOrchestratorServer, allowing advanced orchestration features such as code analysis and class diagram generation.
- Updated demo.py to include orchestrator-specific functionality and command-line options for server type selection.
- Created Dockerfiles for both standard and orchestrator server variants, ensuring proper dependency management and security practices.
- Enhanced README.md to document the new orchestrator features and usage instructions.
- Updated end-to-end tests to validate orchestrator functionality.

These changes improve the overall capabilities and usability of the Mermaid MCP server.

--- a/src/mermaid/Dockerfile
+++ b/src/mermaid/Dockerfile
@@ -18,6 +18,7 @@ ENV CACHE_TTL=3600
 ENV CALLS_PER_MINUTE=25
 ENV DEFAULT_THEME=default
 ENV CUSTOM_THEMES_PATH=/root/.mermaid_themes.json
+ENV SERVER_TYPE=standard
 
 # Start the server when the container launches
-CMD ["python", "-m", "src.mermaid.mermaid_server"]
+CMD ["sh", "-c", "if [ \"$SERVER_TYPE\" = \"orchestrator\" ]; then python -m src.mermaid.mermaid_orchestrator; else python -m src.mermaid.mermaid_server; fi"]
